added ability to change value of completed to true